crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_reference_definition_multiline_label.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..18
  REFERENCE_DEFINITION@0..14
    LINK@0..7
      LINK_START@0..1
        LINK_START@0..1 "["
      LINK_TEXT@1..6
        NEWLINE@1..2 "\n"
        TEXT@2..5 "foo"
        NEWLINE@5..6 "\n"
      TEXT@6..7 "]"
    TEXT@7..8 ":"
    WHITESPACE@8..9 " "
    REFERENCE_URL@9..13
      TEXT@9..13 "/url"
    NEWLINE@13..14 "\n"
  PARAGRAPH@14..18
    TEXT@14..17 "bar"
    NEWLINE@17..18 "\n"
