crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_reference_links.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 97
expression: cst_output
---
DOCUMENT@0..1126
  HEADING@0..18
    ATX_HEADING_MARKER@0..1
      ATX_HEADING_MARKER@0..1 "#"
    WHITESPACE@1..2 " "
    HEADING_CONTENT@2..17
      TEXT@2..17 "Reference Links"
    NEWLINE@17..18 "\n"
  BLANK_LINE@18..19
    BLANK_LINE@18..19 "\n"
  PARAGRAPH@19..71
    TEXT@19..39 "Explicit reference: "
    LINK@39..56
      LINK_START@39..40
        LINK_START@39..40 "["
      LINK_TEXT@40..49
        TEXT@40..49 "link text"
      TEXT@49..50 "]"
      TEXT@50..51 "["
      LINK_REF@51..55
        TEXT@51..55 "ref1"
      TEXT@55..56 "]"
    TEXT@56..70 " in paragraph."
    NEWLINE@70..71 "\n"
  BLANK_LINE@71..72
    BLANK_LINE@71..72 "\n"
  PARAGRAPH@72..118
    TEXT@72..92 "Implicit reference: "
    LINK@92..102
      LINK_START@92..93
        LINK_START@92..93 "["
      LINK_TEXT@93..99
        TEXT@93..99 "GitHub"
      TEXT@99..100 "]"
      TEXT@100..101 "["
      LINK_REF@101..101
      TEXT@101..102 "]"
    TEXT@102..117 " is a platform."
    NEWLINE@117..118 "\n"
  BLANK_LINE@118..119
    BLANK_LINE@118..119 "\n"
  PARAGRAPH@119..162
    TEXT@119..139 "Shortcut reference: "
    LINK@139..150
      LINK_START@139..140
        LINK_START@139..140 "["
      LINK_TEXT@140..149
        TEXT@140..149 "Wikipedia"
      TEXT@149..150 "]"
    TEXT@150..161 " works too."
    NEWLINE@161..162 "\n"
  BLANK_LINE@162..163
    BLANK_LINE@162..163 "\n"
  PARAGRAPH@163..227
    TEXT@163..190 "Multiple refs in one  ..."
    LINK@190..200
      LINK_START@190..191
        LINK_START@190..191 "["
      LINK_TEXT@191..196
        TEXT@191..196 "first"
      TEXT@196..197 "]"
      TEXT@197..198 "["
      LINK_REF@198..199
        TEXT@198..199 "1"
      TEXT@199..200 "]"
    TEXT@200..205 " and "
    LINK@205..216
      LINK_START@205..206
        LINK_START@205..206 "["
      LINK_TEXT@206..212
        TEXT@206..212 "second"
      TEXT@212..213 "]"
      TEXT@213..214 "["
      LINK_REF@214..215
        TEXT@214..215 "2"
      TEXT@215..216 "]"
    TEXT@216..226 " together."
    NEWLINE@226..227 "\n"
  BLANK_LINE@227..228
    BLANK_LINE@227..228 "\n"
  PARAGRAPH@228..291
    TEXT@228..250 "Unresolved reference: "
    UNRESOLVED_REFERENCE@250..277
      LINK_START@250..251
        LINK_START@250..251 "["
      LINK_TEXT@251..263
        TEXT@251..263 "missing link"
      TEXT@263..264 "]"
      TEXT@264..265 "["
      LINK_REF@265..276
        TEXT@265..276 "nonexistent"
      TEXT@276..277 "]"
    TEXT@277..290 " stays as-is."
    NEWLINE@290..291 "\n"
  BLANK_LINE@291..292
    BLANK_LINE@291..292 "\n"
  PARAGRAPH@292..354
    TEXT@292..310 "Case insensitive: "
    LINK@310..323
      LINK_START@310..311
        LINK_START@310..311 "["
      LINK_TEXT@311..315
        TEXT@311..315 "CASE"
      TEXT@315..316 "]"
      TEXT@316..317 "["
      LINK_REF@317..322
        TEXT@317..322 "myref"
      TEXT@322..323 "]"
    TEXT@323..353 " matches lowercase de ..."
    NEWLINE@353..354 "\n"
  BLANK_LINE@354..355
    BLANK_LINE@354..355 "\n"
  PARAGRAPH@355..426
    TEXT@355..370 "With emphasis: "
    LINK@370..395
      LINK_START@370..371
        LINK_START@370..371 "["
      LINK_TEXT@371..388
        EMPHASIS@371..383
          EMPHASIS_MARKER@371..372 "*"
          TEXT@372..382 "emphasized"
          EMPHASIS_MARKER@382..383 "*"
        TEXT@383..388 " text"
      TEXT@388..389 "]"
      TEXT@389..390 "["
      LINK_REF@390..394
        TEXT@390..394 "ref1"
      TEXT@394..395 "]"
    TEXT@395..400 " and "
    LINK@400..424
      LINK_START@400..401
        LINK_START@400..401 "["
      LINK_TEXT@401..417
        TEXT@401..411 "text with "
        INLINE_CODE@411..417
          INLINE_CODE_MARKER@411..412 "`"
          INLINE_CODE_CONTENT@412..416 "code"
          INLINE_CODE_MARKER@416..417 "`"
      TEXT@417..418 "]"
      TEXT@418..419 "["
      LINK_REF@419..423
        TEXT@419..423 "ref1"
      TEXT@423..424 "]"
    TEXT@424..425 "."
    NEWLINE@425..426 "\n"
  BLANK_LINE@426..427
    BLANK_LINE@426..427 "\n"
  REFERENCE_DEFINITION@427..470
    LINK@427..433
      LINK_START@427..428
        LINK_START@427..428 "["
      LINK_TEXT@428..432
        TEXT@428..432 "ref1"
      TEXT@432..433 "]"
    TEXT@433..434 ":"
    WHITESPACE@434..435 " "
    REFERENCE_URL@435..454
      TEXT@435..454 "https://example.com"
    WHITESPACE@454..455 " "
    REFERENCE_TITLE@455..469
      TEXT@455..469 "\"Example Site\""
    NEWLINE@469..470 "\n"
  REFERENCE_DEFINITION@470..499
    LINK@470..478
      LINK_START@470..471
        LINK_START@470..471 "["
      LINK_TEXT@471..477
        TEXT@471..477 "github"
      TEXT@477..478 "]"
    TEXT@478..479 ":"
    WHITESPACE@479..480 " "
    REFERENCE_URL@480..498
      TEXT@480..498 "https://github.com"
    NEWLINE@498..499 "\n"
  REFERENCE_DEFINITION@499..534
    LINK@499..510
      LINK_START@499..500
        LINK_START@499..500 "["
      LINK_TEXT@500..509
        TEXT@500..509 "Wikipedia"
      TEXT@509..510 "]"
    TEXT@510..511 ":"
    WHITESPACE@511..512 " "
    REFERENCE_URL@512..533
      TEXT@512..533 "https://wikipedia.org"
    NEWLINE@533..534 "\n"
  REFERENCE_DEFINITION@534..557
    LINK@534..537
      LINK_START@534..535
        LINK_START@534..535 "["
      LINK_TEXT@535..536
        TEXT@535..536 "1"
      TEXT@536..537 "]"
    TEXT@537..538 ":"
    WHITESPACE@538..539 " "
    REFERENCE_URL@539..556
      TEXT@539..556 "https://first.com"
    NEWLINE@556..557 "\n"
  REFERENCE_DEFINITION@557..581
    LINK@557..560
      LINK_START@557..558
        LINK_START@557..558 "["
      LINK_TEXT@558..559
        TEXT@558..559 "2"
      TEXT@559..560 "]"
    TEXT@560..561 ":"
    WHITESPACE@561..562 " "
    REFERENCE_URL@562..580
      TEXT@562..580 "https://second.com"
    NEWLINE@580..581 "\n"
  REFERENCE_DEFINITION@581..610
    LINK@581..588
      LINK_START@581..582
        LINK_START@581..582 "["
      LINK_TEXT@582..587
        TEXT@582..587 "myref"
      TEXT@587..588 "]"
    TEXT@588..589 ":"
    WHITESPACE@589..590 " "
    REFERENCE_URL@590..609
      TEXT@590..609 "https://matched.com"
    NEWLINE@609..610 "\n"
  BLANK_LINE@610..611
    BLANK_LINE@610..611 "\n"
  HEADING@611..641
    ATX_HEADING_MARKER@611..612
      ATX_HEADING_MARKER@611..612 "#"
    WHITESPACE@612..613 " "
    HEADING_CONTENT@613..640
      TEXT@613..640 "Heading identifiers i ..."
    NEWLINE@640..641 "\n"
  BLANK_LINE@641..642
    BLANK_LINE@641..642 "\n"
  PARAGRAPH@642..682
    TEXT@642..681 "The header above can  ..."
    NEWLINE@681..682 "\n"
  BLANK_LINE@682..683
    BLANK_LINE@682..683 "\n"
  LIST@683..818
    LIST_ITEM@683..715
      LIST_MARKER@683..684 "-"
      WHITESPACE@684..685 " "
      PLAIN@685..715
        UNRESOLVED_REFERENCE@685..714
          LINK_START@685..686
            LINK_START@685..686 "["
          LINK_TEXT@686..713
            TEXT@686..713 "Heading identifiers i ..."
          TEXT@713..714 "]"
        NEWLINE@714..715 "\n"
    LIST_ITEM@715..750
      LIST_MARKER@715..716 "-"
      WHITESPACE@716..717 " "
      PLAIN@717..750
        UNRESOLVED_REFERENCE@717..748
          LINK_START@717..718
            LINK_START@717..718 "["
          LINK_TEXT@718..745
            TEXT@718..745 "Heading identifiers i ..."
          TEXT@745..746 "]"
          TEXT@746..747 "["
          LINK_REF@747..747
          TEXT@747..748 "]"
        TEXT@748..749 " "
        NEWLINE@749..750 "\n"
    LIST_ITEM@750..818
      LIST_MARKER@750..751 "-"
      WHITESPACE@751..752 " "
      PLAIN@752..818
        UNRESOLVED_REFERENCE@752..817
          LINK_START@752..753
            LINK_START@752..753 "["
          LINK_TEXT@753..787
            TEXT@753..787 "the section on headin ..."
          TEXT@787..788 "]"
          TEXT@788..789 "["
          LINK_REF@789..816
            TEXT@789..816 "heading identifiers i ..."
          TEXT@816..817 "]"
        NEWLINE@817..818 "\n"
  BLANK_LINE@818..819
    BLANK_LINE@818..819 "\n"
  PARAGRAPH@819..864
    TEXT@819..863 "Instead of giving the ..."
    NEWLINE@863..864 "\n"
  BLANK_LINE@864..865
    BLANK_LINE@864..865 "\n"
  LIST@865..927
    LIST_ITEM@865..927
      LIST_MARKER@865..866 "-"
      WHITESPACE@866..867 " "
      PLAIN@867..927
        LINK@867..926
          LINK_START@867..868
            LINK_START@867..868 "["
          LINK_TEXT@868..895
            TEXT@868..895 "Heading identifiers i ..."
          LINK_TEXT_END@895..896 "]"
          LINK_DEST_START@896..897 "("
          LINK_DEST@897..925
            TEXT@897..925 "#heading-identifiers- ..."
          LINK_DEST_END@925..926 ")"
        NEWLINE@926..927 "\n"
  BLANK_LINE@927..928
    BLANK_LINE@927..928 "\n"
  PARAGRAPH@928..1095
    TEXT@928..989 "Explicit link referen ..."
    NEWLINE@989..990 "\n"
    TEXT@990..1053 "implicit heading refe ..."
    NEWLINE@1053..1054 "\n"
    TEXT@1054..1073 "link will point to "
    INLINE_CODE@1073..1078
      INLINE_CODE_MARKER@1073..1074 "`"
      INLINE_CODE_CONTENT@1074..1077 "bar"
      INLINE_CODE_MARKER@1077..1078 "`"
    TEXT@1078..1087 ", not to "
    INLINE_CODE@1087..1093
      INLINE_CODE_MARKER@1087..1088 "`"
      INLINE_CODE_CONTENT@1088..1092 "#foo"
      INLINE_CODE_MARKER@1092..1093 "`"
    TEXT@1093..1094 ":"
    NEWLINE@1094..1095 "\n"
  BLANK_LINE@1095..1096
    BLANK_LINE@1095..1096 "\n"
  HEADING@1096..1103
    ATX_HEADING_MARKER@1096..1098
      ATX_HEADING_MARKER@1096..1098 "##"
    WHITESPACE@1098..1099 " "
    HEADING_CONTENT@1099..1102
      TEXT@1099..1102 "Foo"
    NEWLINE@1102..1103 "\n"
  BLANK_LINE@1103..1104
    BLANK_LINE@1103..1104 "\n"
  REFERENCE_DEFINITION@1104..1115
    LINK@1104..1109
      LINK_START@1104..1105
        LINK_START@1104..1105 "["
      LINK_TEXT@1105..1108
        TEXT@1105..1108 "foo"
      TEXT@1108..1109 "]"
    TEXT@1109..1110 ":"
    WHITESPACE@1110..1111 " "
    REFERENCE_URL@1111..1114
      TEXT@1111..1114 "bar"
    NEWLINE@1114..1115 "\n"
  BLANK_LINE@1115..1116
    BLANK_LINE@1115..1116 "\n"
  PARAGRAPH@1116..1126
    TEXT@1116..1120 "See "
    LINK@1120..1125
      LINK_START@1120..1121
        LINK_START@1120..1121 "["
      LINK_TEXT@1121..1124
        TEXT@1121..1124 "foo"
      TEXT@1124..1125 "]"
    NEWLINE@1125..1126 "\n"
