crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_writer_html_blocks.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 97
expression: cst_output
---
DOCUMENT@0..839
  HTML_BLOCK@0..55
    HTML_BLOCK_TAG@0..55
      TEXT@0..54 "<!-- Source: pandoc/t ..."
      NEWLINE@54..55 "\n"
  BLANK_LINE@55..56
    BLANK_LINE@55..56 "\n"
  HEADING@56..70
    ATX_HEADING_MARKER@56..57
      ATX_HEADING_MARKER@56..57 "#"
    WHITESPACE@57..58 " "
    HEADING_CONTENT@58..69
      TEXT@58..69 "HTML Blocks"
    NEWLINE@69..70 "\n"
  BLANK_LINE@70..71
    BLANK_LINE@70..71 "\n"
  PARAGRAPH@71..97
    TEXT@71..96 "Simple block on one l ..."
    NEWLINE@96..97 "\n"
  BLANK_LINE@97..98
    BLANK_LINE@97..98 "\n"
  FENCED_DIV@98..113
    DIV_FENCE_OPEN@98..105
      TEXT@98..101 ":::"
      WHITESPACE@101..102 " "
      DIV_INFO@102..104
        TEXT@102..104 "{}"
      NEWLINE@104..105 "\n"
    PARAGRAPH@105..109
      TEXT@105..108 "foo"
      NEWLINE@108..109 "\n"
    DIV_FENCE_CLOSE@109..113
      TEXT@109..112 ":::"
      NEWLINE@112..113 "\n"
  BLANK_LINE@113..114
    BLANK_LINE@113..114 "\n"
  PARAGRAPH@114..146
    TEXT@114..145 "And nested without in ..."
    NEWLINE@145..146 "\n"
  BLANK_LINE@146..147
    BLANK_LINE@146..147 "\n"
  FENCED_DIV@147..208
    DIV_FENCE_OPEN@147..157
      TEXT@147..153 "::::::"
      WHITESPACE@153..154 " "
      DIV_INFO@154..156
        TEXT@154..156 "{}"
      NEWLINE@156..157 "\n"
    FENCED_DIV@157..185
      DIV_FENCE_OPEN@157..165
        TEXT@157..161 "::::"
        WHITESPACE@161..162 " "
        DIV_INFO@162..164
          TEXT@162..164 "{}"
        NEWLINE@164..165 "\n"
      FENCED_DIV@165..180
        DIV_FENCE_OPEN@165..172
          TEXT@165..168 ":::"
          WHITESPACE@168..169 " "
          DIV_INFO@169..171
            TEXT@169..171 "{}"
          NEWLINE@171..172 "\n"
        PARAGRAPH@172..176
          TEXT@172..175 "foo"
          NEWLINE@175..176 "\n"
        DIV_FENCE_CLOSE@176..180
          TEXT@176..179 ":::"
          NEWLINE@179..180 "\n"
      DIV_FENCE_CLOSE@180..185
        TEXT@180..184 "::::"
        NEWLINE@184..185 "\n"
    BLANK_LINE@185..186
      BLANK_LINE@185..186 "\n"
    FENCED_DIV@186..201
      DIV_FENCE_OPEN@186..193
        TEXT@186..189 ":::"
        WHITESPACE@189..190 " "
        DIV_INFO@190..192
          TEXT@190..192 "{}"
        NEWLINE@192..193 "\n"
      PARAGRAPH@193..197
        TEXT@193..196 "bar"
        NEWLINE@196..197 "\n"
      DIV_FENCE_CLOSE@197..201
        TEXT@197..200 ":::"
        NEWLINE@200..201 "\n"
    DIV_FENCE_CLOSE@201..208
      TEXT@201..207 "::::::"
      NEWLINE@207..208 "\n"
  BLANK_LINE@208..209
    BLANK_LINE@208..209 "\n"
  PARAGRAPH@209..242
    TEXT@209..241 "Interpreted markdown  ..."
    NEWLINE@241..242 "\n"
  BLANK_LINE@242..243
    BLANK_LINE@242..243 "\n"
  HTML_BLOCK@243..337
    HTML_BLOCK_TAG@243..251
      TEXT@243..250 "<table>"
      NEWLINE@250..251 "\n"
    HTML_BLOCK@251..328
      HTML_BLOCK_TAG@251..256
        TEXT@251..255 "<tr>"
        NEWLINE@255..256 "\n"
      HTML_BLOCK@256..288
        HTML_BLOCK_TAG@256..261
          TEXT@256..260 "<td>"
          NEWLINE@260..261 "\n"
        PLAIN@261..282
          TEXT@261..269 "This is "
          EMPHASIS@269..281
            EMPHASIS_MARKER@269..270 "*"
            TEXT@270..280 "emphasized"
            EMPHASIS_MARKER@280..281 "*"
          NEWLINE@281..282 "\n"
        HTML_BLOCK_TAG@282..288
          TEXT@282..287 "</td>"
          NEWLINE@287..288 "\n"
      HTML_BLOCK@288..322
        HTML_BLOCK_TAG@288..293
          TEXT@288..292 "<td>"
          NEWLINE@292..293 "\n"
        PLAIN@293..316
          TEXT@293..305 "And this is "
          STRONG@305..315
            STRONG_MARKER@305..307 "**"
            TEXT@307..313 "strong"
            STRONG_MARKER@313..315 "**"
          NEWLINE@315..316 "\n"
        HTML_BLOCK_TAG@316..322
          TEXT@316..321 "</td>"
          NEWLINE@321..322 "\n"
      HTML_BLOCK_TAG@322..328
        TEXT@322..327 "</tr>"
        NEWLINE@327..328 "\n"
    HTML_BLOCK_TAG@328..337
      TEXT@328..336 "</table>"
      NEWLINE@336..337 "\n"
  HTML_BLOCK@337..441
    HTML_BLOCK_TAG@337..441
      TEXT@337..440 "<script type=\"text/ja ..."
      NEWLINE@440..441 "\n"
  BLANK_LINE@441..442
    BLANK_LINE@441..442 "\n"
  PARAGRAPH@442..479
    TEXT@442..478 "This should be a code ..."
    NEWLINE@478..479 "\n"
  BLANK_LINE@479..480
    BLANK_LINE@479..480 "\n"
  CODE_BLOCK@480..513
    CODE_CONTENT@480..513
      WHITESPACE@480..484 "    "
      TEXT@484..489 "<div>"
      NEWLINE@489..490 "\n"
      WHITESPACE@490..498 "        "
      TEXT@498..501 "foo"
      NEWLINE@501..502 "\n"
      WHITESPACE@502..506 "    "
      TEXT@506..512 "</div>"
      NEWLINE@512..513 "\n"
  BLANK_LINE@513..514
    BLANK_LINE@513..514 "\n"
  PARAGRAPH@514..530
    TEXT@514..529 "As should this:"
    NEWLINE@529..530 "\n"
  BLANK_LINE@530..531
    BLANK_LINE@530..531 "\n"
  CODE_BLOCK@531..550
    CODE_CONTENT@531..550
      WHITESPACE@531..535 "    "
      TEXT@535..549 "<div>foo</div>"
      NEWLINE@549..550 "\n"
  BLANK_LINE@550..551
    BLANK_LINE@550..551 "\n"
  PARAGRAPH@551..588
    TEXT@551..587 "This should just be a ..."
    NEWLINE@587..588 "\n"
  BLANK_LINE@588..589
    BLANK_LINE@588..589 "\n"
  HTML_BLOCK@589..606
    HTML_BLOCK_TAG@589..606
      TEXT@589..605 "<!-- Comment -->"
      NEWLINE@605..606 "\n"
  BLANK_LINE@606..607
    BLANK_LINE@606..607 "\n"
  PARAGRAPH@607..618
    TEXT@607..617 "Multiline:"
    NEWLINE@617..618 "\n"
  BLANK_LINE@618..619
    BLANK_LINE@618..619 "\n"
  HTML_BLOCK@619..638
    HTML_BLOCK_TAG@619..624
      TEXT@619..623 "<!--"
      NEWLINE@623..624 "\n"
    HTML_BLOCK_CONTENT@624..634
      TEXT@624..628 "Blah"
      NEWLINE@628..629 "\n"
      TEXT@629..633 "Blah"
      NEWLINE@633..634 "\n"
    HTML_BLOCK_TAG@634..638
      TEXT@634..637 "-->"
      NEWLINE@637..638 "\n"
  HTML_BLOCK@638..676
    HTML_BLOCK_TAG@638..643
      TEXT@638..642 "<!--"
      NEWLINE@642..643 "\n"
    HTML_BLOCK_CONTENT@643..672
      TEXT@643..671 "    This is another c ..."
      NEWLINE@671..672 "\n"
    HTML_BLOCK_TAG@672..676
      TEXT@672..675 "-->"
      NEWLINE@675..676 "\n"
  BLANK_LINE@676..677
    BLANK_LINE@676..677 "\n"
  PARAGRAPH@677..689
    TEXT@677..688 "Code block:"
    NEWLINE@688..689 "\n"
  BLANK_LINE@689..690
    BLANK_LINE@689..690 "\n"
  CODE_BLOCK@690..711
    CODE_CONTENT@690..711
      WHITESPACE@690..694 "    "
      TEXT@694..710 "<!-- Comment -->"
      NEWLINE@710..711 "\n"
  BLANK_LINE@711..712
    BLANK_LINE@711..712 "\n"
  PARAGRAPH@712..718
    TEXT@712..717 "Hr's:"
    NEWLINE@717..718 "\n"
  BLANK_LINE@718..719
    BLANK_LINE@718..719 "\n"
  HTML_BLOCK@719..839
    HTML_BLOCK_TAG@719..724
      TEXT@719..723 "<hr>"
      NEWLINE@723..724 "\n"
    HTML_BLOCK_CONTENT@724..839
      TEXT@724..730 "<hr />"
      NEWLINE@730..731 "\n"
      TEXT@731..737 "<hr />"
      NEWLINE@737..738 "\n"
      TEXT@738..742 "<hr>"
      NEWLINE@742..743 "\n"
      TEXT@743..749 "<hr />"
      NEWLINE@749..750 "\n"
      TEXT@750..756 "<hr />"
      NEWLINE@756..757 "\n"
      TEXT@757..784 "<hr class=\"foo\" id=\"b ..."
      NEWLINE@784..785 "\n"
      TEXT@785..812 "<hr class=\"foo\" id=\"b ..."
      NEWLINE@812..813 "\n"
      TEXT@813..838 "<hr class=\"foo\" id=\"b ..."
      NEWLINE@838..839 "\n"
